add simple argument parser.