@@ -35,6 +35,9 @@ tasks.withType<JavaCompile>().configureEach {
     options.compilerArgs.add("--enable-preview")
 }
 
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
+}
 
 application {
     // Define the main class for the application.
